# langchain_text_classification_app

./: CLAUDE.md  README.md  main.py  pyproject.toml
src/: classifier.py  config.py  data.py  demo.ipynb  evaluate.py  prompts.py  schema.py  tools.py
tests/: test_evaluate.py  test_main.py  test_tools.py
