[project]
name = "langchain-text-classification-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "langchain>=1.2.15",
    "langchain-core>=1.2.26",
    "langchain-ollama>=1.1.0",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "ipykernel",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
